--- a/ErstigolfUnity/Packages/manifest.json
+++ b/ErstigolfUnity/Packages/manifest.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.4",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.shadergraph": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
